// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<withPropsOnChange(HorizontalGutter)
  id="talk-comments-replyList-log--comment-id"
  role="log"
>
  <withContext(createMutationContainer(Relay(CommentContainer)))
    asset={
      Object {
        "id": "asset-id",
      }
    }
    comment={
      Object {
        "id": "comment-1",
      }
    }
    indentLevel={1}
    key="comment-1"
  />
  <withContext(createMutationContainer(Relay(CommentContainer)))
    asset={
      Object {
        "id": "asset-id",
      }
    }
    comment={
      Object {
        "id": "comment-2",
      }
    }
    indentLevel={1}
    key="comment-2"
  />
</withPropsOnChange(HorizontalGutter)>
`;

exports[`when there is more disables load more button 1`] = `
<withPropsOnChange(HorizontalGutter)
  id="talk-comments-replyList-log--comment-id"
  role="log"
>
  <withContext(createMutationContainer(Relay(CommentContainer)))
    asset={
      Object {
        "id": "asset-id",
      }
    }
    comment={
      Object {
        "id": "comment-1",
      }
    }
    indentLevel={1}
    key="comment-1"
  />
  <withContext(createMutationContainer(Relay(CommentContainer)))
    asset={
      Object {
        "id": "asset-id",
      }
    }
    comment={
      Object {
        "id": "comment-2",
      }
    }
    indentLevel={1}
    key="comment-2"
  />
  <Indent
    level={1}
    noBorder={true}
  >
    <Localized
      id="comments-replyList-showAll"
    >
      <withPropsOnChange(Button)
        aria-controls="talk-comments-replyList-log--comment-id"
        disabled={true}
        fullWidth={true}
        id="talk-comments-replyList-showAll--comment-id"
        onClick={[Function]}
        variant="outlined"
      >
        Show All Replies
      </withPropsOnChange(Button)>
    </Localized>
  </Indent>
</withPropsOnChange(HorizontalGutter)>
`;

exports[`when there is more renders a load more button 1`] = `
<withPropsOnChange(HorizontalGutter)
  id="talk-comments-replyList-log--comment-id"
  role="log"
>
  <withContext(createMutationContainer(Relay(CommentContainer)))
    asset={
      Object {
        "id": "asset-id",
      }
    }
    comment={
      Object {
        "id": "comment-1",
      }
    }
    indentLevel={1}
    key="comment-1"
  />
  <withContext(createMutationContainer(Relay(CommentContainer)))
    asset={
      Object {
        "id": "asset-id",
      }
    }
    comment={
      Object {
        "id": "comment-2",
      }
    }
    indentLevel={1}
    key="comment-2"
  />
  <Indent
    level={1}
    noBorder={true}
  >
    <Localized
      id="comments-replyList-showAll"
    >
      <withPropsOnChange(Button)
        aria-controls="talk-comments-replyList-log--comment-id"
        disabled={false}
        fullWidth={true}
        id="talk-comments-replyList-showAll--comment-id"
        onClick={[Function]}
        variant="outlined"
      >
        Show All Replies
      </withPropsOnChange(Button)>
    </Localized>
  </Indent>
</withPropsOnChange(HorizontalGutter)>
`;
